[tool.poetry]
name = "selenium-scripts"
version = "0.1.0"
description = ""
authors = ["dilan"]
readme = "README.md"
packages = [{include = "selenium_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
